update:master style修正

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@ h2,p {
   width: 400px;
   height: 150px;
   background-color: #eee;
+  border: 1px solid #333;
 }
 
 .box > * {
@@ -71,6 +72,7 @@ h2,p {
   width: 400px;
   height: 150px;
   background-color: #eee;
+  border: 1px solid #333;
 }
 
 .box2::after {
@@ -203,7 +205,7 @@ h2,p {
       </a>
     </div>
     <h3>「display:flex」で実装</h3>
-    <div class='media2'>
+    <div class='media2 l-bottom-large'>
       <a class='media2-anchor' href='#'>
         <img class='media2-thumbnail' src='images/sample.jpg' alt='カエルの置物'>
         <div class='media2-text'>
@@ -214,7 +216,9 @@ h2,p {
     </div>
 
     <h2>CSSをボタンを作る</h2>
-    <a href='#' class='btn'>BUTTON</a>
+    <div class='l-bottom-large'>
+      <a href='#' class='btn'>BUTTON</a>
+    </div>
   </div>
 </body>
 </html>
